# rest-api-sections

./: pyproject.toml
section4/: app.py
section5/: app.py  security.py
section6/: create_table.py
