[tool.poetry]
name = "rest-api-sections"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.1"
flask-Restful = "^0.3.8"

[tool.poetry.dev-dependencies]
flask-jwt = "^0.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
